add(tp3 segunda parte)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,73 +3,72 @@
 	<head >
 		<meta charset="UTF-8">
 		<title>Java</title>
+		<link rel="stylesheet" href="/css/estilos.css">
 	</head>
 	<body>
-		<header>
-			<h1>Java</h1>
-			<nav>
-				<a>Que es el lenguaje Java</a>
-				<a>Caracteristicas de Java</a>
-				<a>Ediciones</a>
+		<header id="encabezado">
+			<h1 class="titulo">Java</h1>
+			<nav class="nav">
+				<a href="/" class="nav-link">Pagina principal</a>
+				<a href="/form" class="nav-link">Formulario de usuario</a>
 			</nav>
 		</header>
-		<main>
-			<section>
-				<h2>Lenguaje Java</h2>
-				<p>	Java es un lenguaje de desarrollo de alto nivel, creado para ser sencillo, orientado a objetos, seguro, eficaz e independiente de las arquitecturas, portable, eficaz, multitarea y dinámico</p>
+		<main class="cuerpo">
+			<section class="seccion">
+				<h2 class="subtitulo">Lenguaje Java</h2>
+				<p class="parrafo">	Java es un lenguaje de desarrollo de alto nivel, creado para ser sencillo, orientado a objetos, seguro, eficaz e independiente de las arquitecturas, portable, eficaz, multitarea y dinámico</p>
 			</section>
-			<section>
-				<h3>Caracteristicas de java</h3>	
-				<p></p>	
-				<ul>
-					<li>Sencillo: La sintaxis de Java es similar a la de los lenguajes C y C++, pero evita
+			<section class="seccion">
+				<h3 class="subtitulo">Caracteristicas de java</h3>	
+				<ul class="lista">
+					<li class="lista-seccion">Sencillo: La sintaxis de Java es similar a la de los lenguajes C y C++, pero evita
 					características semánticas que los vuelven complejos, confusos y poco seguros</li>
-					<li>Orientado a objetos: Salvo los tipos de datos primitivos, todo en Java es concebido
+					<li class="lista-seccion">Orientado a objetos: Salvo los tipos de datos primitivos, todo en Java es concebido
 					como un objeto. Y, además, Java se ha provisto de clases incorporadas que encapsulan
 					los tipos primitivos (los wrappers). Por lo tanto, Java es un lenguaje de programación
 					orientado a objetos y diseñado según el modelo de otros lenguajes (C++, Eiffel,
 					SmallTalk, Objective C, Cedar/Mesa, Ada, Perl), pero sin sus defectos</li>
-					<li>Distribuido: Java implementa los protocolos de red estándar, lo que permite desarrollar
+					<li class="lista-seccion">Distribuido: Java implementa los protocolos de red estándar, lo que permite desarrollar
 					aplicaciones cliente/servidor en arquitecturas distribuidas, con el fin de invocar
 					tratamientos y/o recuperar datos de máquinas remotas. Con este fin, Java estándar
 					cuenta con API´s que permiten crear aplicaciones cliente/servidor distribuidas.
 </li>
-					<li>Robusto: Java es un lenguaje fuertemente tipado y estricto. Por ejemplo, la declaración
+					<li class="lista-seccion">Robusto: Java es un lenguaje fuertemente tipado y estricto. Por ejemplo, la declaración
 de las variables debe ser obligatoriamente explícita en Java. </li>
 				</ul>
 			</section>
-			<section>
-				<h3>Ediciones Java: </h3>	
-				<p>La configuración de una plataforma Java afecta fundamentalmente los servicios que esta ofrece,
+			<section class="seccion">
+				<h3 class="subtitulo">Ediciones Java: </h3>	
+				<p class="parrafo">La configuración de una plataforma Java afecta fundamentalmente los servicios que esta ofrece,
 					las herramientas adicionales que incorpora y también aspectos menos visibles, tales como el
 					modo de funcionamiento de la JVM. De acuerdo con la documentación actual de Oracle se
 					puede distinguir las siguientes cuatro ediciones de Java:</p>
-				<table>
+				<table class="tabla">
 					<tr>
-						<th>Edicion</th>
-						<th>Java SE</th>
-						<th>Java FX</th>
-						<th>Java EE</th>
-						<th>Java ME</th>
+						<th class="table-casilla">Edicion</th>
+						<th	class="table-casilla">Java SE</th>
+						<th	class="table-casilla">Java FX</th>
+						<th	class="table-casilla">Java EE</th>
+						<th	class="table-casilla">Java ME</th>
 					</tr>
 					<tr>
-						<th>Descripcion</th>
-						<th>Usado para crear aplicaciones de escritorio.</th>
-						<th>Usado para el desarrollo de proyectos RIA. Incorporado a Java SE desde la version 7.</th>
-						<th>Dirigida al desarrollo de soluciones de software ejecutadas en un servidor de aplicaciones.</th>
-						<th>Enfocada en la creacion de programas ejecutados en sistemas con recursos limitados.</th>
+						<th	class="table-casilla">Descripcion</th>
+						<th	class="table-casilla">Usado para crear aplicaciones de escritorio.</th>
+						<th	class="table-casilla">Usado para el desarrollo de proyectos RIA. Incorporado a Java SE desde la version 7.</th>
+						<th	class="table-casilla">Dirigida al desarrollo de soluciones de software ejecutadas en un servidor de aplicaciones.</th>
+						<th	class="table-casilla">Enfocada en la creacion de programas ejecutados en sistemas con recursos limitados.</th>
 					</tr>
 				</table>				
 			</section>
-			<aside>
-				<a href="https://www.java.com/es/">Más sobre Java!</a>
-				<img src="https://miro.medium.com/v2/resize:fit:2560/1*2XrX0fP0htyTCah7AglTig.jpeg" alt="Logo de Java">
+			<aside class="aparte">
+				<img class="aparte-img" src="https://miro.medium.com/v2/resize:fit:2560/1*2XrX0fP0htyTCah7AglTig.jpeg" alt="Logo de Java">
+				<a class="aparte-anchor" href="https://www.java.com/es/">Más sobre Java!</a>
 			</aside>
 		</main>
-		<footer>
-			<h3>Informacion de contacto:</h3>
-			<p>Correo: pablobejarano2112@gmail.com</p>
-			<a href="https://github.com/pablo-bejarano2">Github</a>
+		<footer id="pie-pagina">
+			<h3 class="subtitulo">Informacion de contacto:</h3>
+			<p  class="parrafo">Correo: pablobejarano2112@gmail.com</p>
+			<a class="piepagina-anchor" href="https://github.com/pablo-bejarano2">Github</a>
 		</footer>
 	</body>
 	
