fix(validator error 2)

--- a/src/main/resources/templates/form-cliente.html
+++ b/src/main/resources/templates/form-cliente.html
@@ -49,7 +49,7 @@
 			
 			<label	class="etiqueta" for="provincia">Provincia</label>
 			<select id="provincia" name="provincia" required>
-				<option ></option>
+				<option value="">Elige una opcion</option>
 				<option value="buenosAires">Buenos Aires</option>
 				<option value="ciudadAutonoma">Ciudad autónoma de Buenos Aires</option>
 				<option value="catamarca">Catamarca</option>
